fixed alignment of topics cardds

--- a/app/assets/stylesheets/application/lessons.scss
+++ b/app/assets/stylesheets/application/lessons.scss
@@ -87,6 +87,9 @@
     right: 0;
   }
 
+  .topics-cards {
+    padding-left: 0;
+  }
   .topic.card {
     .description {
       font-size: 1.3rem;
